<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="string_nanodegree">My Nanodegree Apps!</string>
    <string name="string_spotify">SPOTIFY STREAMER</string>
    <string name="string_score_app">SCORES APP</string>
    <string name="string_library_app">LIBRARY APP</string>
    <string name="string_build_it_bigger">BUILD IT BIGGER</string>
    <string name="string_xyz_reader">XYZ READER</string>
    <string name="string_capstone">CAPSTONE:MY OWN APP</string>
    <string name="action_settings">Settings</string>
    <string name="string_spotify_message">This button will launch my Spotify App!</string>
    <string name="string_score_app_message">This button will launch my Scores App!</string>
    <string name="string_library_app_message">This button will launch my Library App!</string>
    <string name="string_build_it_bigger_app_message">This button will launch my Build it bigger App!</string>
    <string name="string_xyz_reader_app_message">This button will launch my XYZ reader App!</string>
    <string name="string_capstone_app_message">This button will launch my Capstone App!</string>
</resources>
